[build-system]
requires = [
    "hatchling",
    "hatch-vcs"
]
build-backend = "hatchling.build"

[project]
name = "scipion-fluo"
description = "Base pyworkflow plugin for Fluorescence image processing"
readme = "README.rst"
authors = [{name = "Jean Plumail", email = "jplumail@unistra.fr"}]
keywords = ["scipion", "fluorescence", "imageprocessing", "scipion-3.0"]
dynamic = ["version"]
dependencies = [
    "scipion-pyworkflow",
    "scipy",
    "numpy",
    "tifffile",
    "pint",
    "ome-types",
    "spfluo"
]

[project.urls]
Repository = "https://github.com/jplumail/scipion-fluo"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["pwfluo"]

[project.optional-dependencies]
dev = ["ruff", "black", "pre-commit"]

[project.scripts]
scipion-fluo = "pwfluo.__main__:main"

[project.entry-points."pyworkflow.plugin"]
pwfluo = "pwfluo"

[tool.ruff]
select = [
    "E", "F", # default
    "I", # isort
]

[tool.ruff.isort]
known-first-party = ["pwfluo"]
known-third-party = ["pyworkflow"]