[build-system]
requires = [
    "hatchling",
    "hatch-vcs"
]
build-backend = "hatchling.build"

[project]
name = "scipion-fluo"
requires-python = ">=3.8"
description = "Base pyworkflow plugin for Fluorescence image processing"
readme = "README.rst"
authors = [{name = "Jean Plumail", email = "jplumail@unistra.fr"}]
keywords = ["scipion", "fluorescence", "imageprocessing", "scipion-3.0"]
dynamic = ["version"]
dependencies = [
    "scipion-pyworkflow @ git+ssh://git@github.com/jplumail/scipion-pyworkflow@windows ; platform_system == 'Windows'",
    "scipion-pyworkflow>=3.3 ; platform_system == 'Linux'",
    "scipy",
    "numpy",
    "tifffile",
    "pint",
    "ome-types",
    "spfluo @ git+ssh://git@github.com/jplumail/spfluo"
]

[project.urls]
Repository = "https://github.com/jplumail/scipion-fluo"

[project.optional-dependencies]
dev = ["ruff", "pre-commit"]

[project.scripts]
scipion-fluo = "pwfluo.__main__:main"

[project.entry-points."pyworkflow.plugin"]
pwfluo = "pwfluo"
